# VPGSolvers

./: .gitmodules  CMakeLists.txt  Conf.h  Dockerfile  README.md  VPG_PM.cpp  VPG_PM.h  VPG_PP.cpp  VPG_PP.h  VPGame.cpp  VPGame.h  eVPG  main.cpp
.github/workflows/: release.yaml
Algorithms/: VPG_PM.cpp  VPG_PM.h  VPG_PP.cpp  VPG_PP.h  VPG_SCC.cpp  VPG_SCC.h
test/: VPG_PM_test.cpp  VPG_PP_test.ccp  VPG_SCC_test.cpp
test/resources/: 0SOL  0VPG  1SOL  1VPG
test/src/: VPG_PM_test.cpp  VPG_PP_test.cpp  VPG_SCC_test.cpp  VPG_test.cpp
